--- a/src/styles.css
+++ b/src/styles.css
@@ -46,9 +46,8 @@ header .wrapper {
 .char-list {
   margin-block: 1rem;
 
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
 
   column-gap: 2%;
   row-gap: 24px;
@@ -59,8 +58,7 @@ header .wrapper {
   border-radius: 8px;
   padding: 16px;
 
-  flex-basis: 15%;
-
+  overflow: hidden;
   transition: all 150ms ease-in;
 }
 
